 - Changed instruction execution to 16 at a time blocks (tested and stable) [shash]
 - Really minor memory access speed up (mainly added for clarity) [shash]
 - Added transparency and fixed material alpha support and alpha testing on the 3D core [shash]
 - Changed how depth initial values are calculated (fixes SM64DS skybox) [shash] 
 - Added SSE2 version for some matrix routines [CrazyMax]
 - Some fixes in core (New SMB don't freeze now) [CrazyMax]
 - Some optimizations in code [CrazyMax]
 - Make matrix 4x4 multiply routines use W-coordinate. [zeromus]
 - Add many matrix and vector functions to matrix.cpp [zeromus]
 - Convert to c++!
 - Added gfx3d module which emulates the whole GE as part of the core emu. Moved the windows/cocoa OGLRender to the 
   emu core and replace ogl_collector. Now every platform shares the same 3d code. [zeromus]
 - Add in some crude interpolation in the SPU (conditionally compiled) so that I can bear to listen to it. [zeromus]
 - Experiment: always one silent SPU core at 44.1khz synched with emu for more precision.
   The audible core runs with the host, causing music to slow down but not tear or pitch bend. [zeromus]
 - Change savestate code to support loosely bound chunks and more easily other parts of the emu (GE, GPU).
   The savestate format is changed, but from now on it is in principle more resilient (it will continue to break though) [zeromus]
 - Remove 16MB of WRAM at 0x01****** from arm9. Maped to unused instead. What was this? [zeromus]
 - Change SPU to run two spus in parallel. SPU_core is the official one. SPU_user produces output.
   This lets us do inaccurate things with SPU_user which might sound better while being more accurate with SPU_core. [zeromus]
 - Add RTC implementations (not fully) [CrazyMax]
 - Rewrite VRAM mapping control and render (old save states broken) [CrazyMax]
 - Add a GUI hud system; start adding some HUD elements
 Mac OS X port:
 - Fixed: Filenames and paths with unicode characters now work. [Jeff]